@@ -22,8 +22,8 @@ EXTRA_PROGRAMS =
 pkgincdir = $(pkgincludedir)
 pkginc_HEADERS = \
 	fs.h misc.h rpmcli.h rpmlib.h \
-	rpmal.h rpmdpkg.h rpmds.h rpmevr.h rpmfc.h rpmfi.h rpmgi.h rpmps.h \
-	rpmsx.h rpmte.h rpmts.h stringbuf.h
+	rpmal.h rpmdpkg.h rpmds.h rpmevr.h rpmfc.h rpmfi.h rpmgi.h \
+	rpmns.h rpmps.h rpmsx.h rpmte.h rpmts.h stringbuf.h
 noinst_HEADERS = \
 	cpio.h fsm.h manifest.h psm.h rpmlead.h rpmlock.h signature.h tar.h
 
@@ -40,7 +40,7 @@ librpm_la_SOURCES = \
 	poptALL.c poptI.c poptQV.c psm.c query.c \
 	rpmal.c rpmchecksig.c rpmdpkg.c rpmds.c rpmevr.c rpmfc.c \
 	rpmfi.c rpmgi.c rpminstall.c rpmrollback.c \
-	rpmlead.c rpmlock.c rpmps.c rpmrc.c rpmsx.c rpmte.c rpmts.c \
+	rpmlead.c rpmlock.c rpmns.c rpmps.c rpmrc.c rpmsx.c rpmte.c rpmts.c \
 	rpmvercmp.c signature.c stringbuf.c transaction.c \
 	verify.c tar.c
 librpm_la_LDFLAGS = -no-undefined -release $(LT_CURRENT).$(LT_REVISION) $(LDFLAGS) \
