@@ -50,6 +50,7 @@
 	- fix: rpmdsSearch() end-of-loop test incorrect at end-of-array.
 	- fix: use dgettext, not gettext, everywhere.
 	- fix: install preferred color packages first (#214737, #220348).
+	- rpmns: create rpmns.c/rpmns.h.
 
 4.4.7 -> 4.4.8:
 	- start rpm-4.4.8 development.
